--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   cupertino_icons: ^0.1.3
   provider: ^4.1.3
   google_fonts: ^1.1.0
+  firebase_core: ^0.4.5
+  cloud_firestore: ^0.13.6
+  firebase_auth: ^0.16.1
 
 dev_dependencies:
   flutter_test:
